# roko

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
arch/: bad_chars.rk  char_decay.rk  char_load_err.rk  div_int.rk  hello_world_ch.rk  hello_world_cstr.rk  hello_world_cstr_err.rk  max.rk  mod_int.rk  mul_int.rk  pow_int.rk
arch/7bit/: bad_chars.rk  ch_echo.rk  char_bad_store.rk  char_lazy_set.rk  char_memcpy.rk  div_int.rk  hello_world_ch.rk  hello_world_string.rk  max.rk  mod_int.rk  mul_int.rk  pow_int.rk
arch/8bit/: add_int.rk  div_int.rk  hello_world_string.rk  max.rk  mul_int.rk
docs/: roko.doxyfile
src/: main.c  rk_core.c  rk_core.h
